--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,35 @@
+div.line{
+  height: 5px; /* Adjust this to be whatever height you want */
+  border: 0;
+  background: black;
+}
+
+footer{
+  min-height: 50px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  
+}
 .quote-button{
     background-color: green; 
     font-weight: 600; 
     margin-right: -30%;
 }
-
+.home-photos{
+column-count: 2;      /* two columns */
+  column-gap: 800px;     /* gap between columns */
+  width: 100%;
+  max-width: 2000px;    /* optional max width */
+  margin:  auto;       /* center the container */
+}
 .home-photos img{
-    height: 30%;
-    width: 450px;
-  
+width: 100%;          /* make image fill column width */
+  display: block;       /* remove inline spacing */
+  margin-bottom: 40px;  /* spacing between images vertically */
+  break-inside: avoid;
 }
 
     .center {
@@ -21,12 +43,27 @@
       background-color: #f8f9fa;
       padding: 10px;
     }
-
     .nav-link {
       color: black;
     }
 
+    .nav-link .active {
+  font-weight: bold;
+  color: black !important;
+
+}
     .nav-link:hover {
       color: black;
       /* Bootstrap primary blue */
     }
+   a, a:hover{
+    color:inherit;
+    text-decoration: none !important;
+   }
+   h1{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 10px;
+   }
+   img.logo{
+      border-radius: 100px;
+   }
