--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -18,20 +18,26 @@ footer{
     font-weight: 600; 
     margin-right: -30%;
 }
-.home-photos{
-column-count: 2;      /* two columns */
-  column-gap: 700px;     /* gap between columns */
-  width: 100%;
-  max-width: 1800px;    /* optional max width */
-  position: absolute;
-  margin: auto;       /* center the container */
-  
+.home-photos .col-md-6 {
+  padding-left: 50px;
+  padding-right: 50px;
 }
-.home-photos img{
-width: 100%;          /* make image fill column width */
+.home-photos .row{
+  --bs-gutter-x:100px;
+}
+
+.home-photos img {
+  width: 100%;          /* fill column */
   display: block;       /* remove inline spacing */
-  margin-bottom: 40px;  /* spacing between images vertically */
-  break-inside: avoid;
+  margin-bottom: 40px;  /* vertical spacing */
+  border-radius: 10px;  /* optional rounded corners */
+}
+#bannerimagehome{
+  width: 100%;
+  background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstatic.vecteezy.com%2Fsystem%2Fresources%2Fpreviews%2F027%2F099%2F677%2Fnon_2x%2Fbanner-with-a-background-of-isolated-green-grass-ultrarealistic-ar-167-free-photo.jpg&f=1&nofb=1&ipt=a3dae9ba7e04c547c5915be44fc77c91c6158d6200158b13a29f9bd875c17c9e);
+  height: 405px;
+  background-position: center;
+  opacity: 90%;
 }
 
     .center {
@@ -63,8 +69,12 @@ width: 100%;          /* make image fill column width */
     text-decoration: none !important;
    }
    h1{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+   }
+   body{
+    font-family: var(--system-ui-font);
    }
    img.logo{
       border-radius: 100px;
